Fix line separators not showing in firefox

--- a/src/react-components/home/HomePage.scss
+++ b/src/react-components/home/HomePage.scss
@@ -119,6 +119,10 @@
   //background-color: var(--home-media-panel-background-color);
 }
 
+:local(.line) {
+  border-bottom: thin solid #fff;
+}
+
 :local(.secondary-links) {
   display: flex;
   flex-direction: column;
