--- a/src/react-components/home/MediaGrid.scss
+++ b/src/react-components/home/MediaGrid.scss
@@ -8,7 +8,11 @@
   justify-items: center;
   justify-content: space-evenly;
 
-  & > * {
+  &>* {
     margin: 8px;
   }
+}
+
+:local(.line) {
+  border-bottom: thin solid #fff;
 }
